// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`closable-side.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-default-menu t-is-collapsed"
    style="width: 64px;"
  >
    <div
      class="t-default-menu__inner"
    >
      <div
        class="t-menu__logo"
      >
        <span>
          LOGO
        </span>
      </div>
      <ul
        class="t-menu"
      >
        <li
          class="t-menu__item"
        >
          <svg
            class="t-icon t-icon-app"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M11.25 1.75a3 3 0 100 6 3 3 0 000-6zm-2 3a2 2 0 114 0 2 2 0 01-4 0zM2 3a1 1 0 011-1h3.5a1 1 0 011 1v3.5a1 1 0 01-1 1H3a1 1 0 01-1-1V3zm1 0v3.5h3.5V3H3zM2 9.5a1 1 0 011-1h3.5a1 1 0 011 1V13a1 1 0 01-1 1H3a1 1 0 01-1-1V9.5zm1 0V13h3.5V9.5H3zM8.5 9.5a1 1 0 011-1H13a1 1 0 011 1V13a1 1 0 01-1 1H9.5a1 1 0 01-1-1V9.5zm1 3.5H13V9.5H9.5V13z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          <span
            class="t-menu__content"
          >
            仪表盘
          </span>
        </li>
        <li
          class="t-submenu"
        >
          <div
            class="t-menu__item t-is-active"
          >
            <svg
              class="t-icon t-icon-code"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8.94 2.56L6.09 13.18l.97.26L9.9 2.82l-.97-.26zM2.15 8l3.42 3.43-.7.7-3.71-3.7a.6.6 0 010-.85l3.7-3.71.71.7L2.15 8zM13.85 8l-3.44 3.4.7.71 3.73-3.68a.6.6 0 000-.86L11.1 3.9l-.7.7L13.85 8z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
             
            <span
              class="t-menu__content"
            >
              <span>
                资源列表
              </span>
            </span>
            <svg
              class="t-fake-arrow"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
          <div
            class="t-menu__popup t-is-vertical"
          >
            <ul
              class="t-menu__popup-wrapper"
              style="max-height: 0;"
            >
              <li
                class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-is-disabled t-is-active t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  <span>
                    菜单二
                  </span>
                </span>
              </li>
            </ul>
          </div>
        </li>
        <li
          class="t-submenu"
        >
          <div
            class="t-menu__item"
          >
            <svg
              class="t-icon t-icon-file"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M3.5 1c-.48 0-1 .34-1 .92v12.16c0 .58.52.92 1 .92h9c.48 0 1-.34 1-.92V5.7a1 1 0 00-.3-.71L9.5 1.3a1 1 0 00-.7-.3H3.5zm5 1v4.01h4V14h-9V2h5zm1 .7l2.3 2.31H9.5v-2.3z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
             
            <span
              class="t-menu__content"
            >
              <span>
                调度平台
              </span>
            </span>
            <svg
              class="t-fake-arrow"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
          <div
            class="t-menu__popup t-is-vertical"
          >
            <ul
              class="t-menu__popup-wrapper"
              style="max-height: 0;"
            >
              <li
                class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  <span>
                    三级菜单-1
                  </span>
                </span>
              </li>
              <li
                class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  <span>
                    三级菜单-2
                  </span>
                </span>
              </li>
            </ul>
          </div>
        </li>
        <li
          class="t-submenu"
        >
          <div
            class="t-menu__item"
          >
            <svg
              class="t-icon t-icon-user"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M11.5 5a3.5 3.5 0 11-7 0 3.5 3.5 0 017 0zm-1 0a2.5 2.5 0 10-5 0 2.5 2.5 0 005 0zM13.96 10.85c.34.16.54.5.54.87V14a.5.5 0 01-.5.5H2a.5.5 0 01-.5-.5v-2.28c0-.37.2-.7.54-.87a13.79 13.79 0 0111.92 0zM8 10.5c-1.97 0-3.83.45-5.5 1.24v1.76h11v-1.76A12.78 12.78 0 008 10.5z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
             
            <span
              class="t-menu__content"
            >
              <span>
                精准监控
              </span>
            </span>
            <svg
              class="t-fake-arrow"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
          <div
            class="t-menu__popup t-is-vertical"
          >
            <ul
              class="t-menu__popup-wrapper"
              style="max-height: 0;"
            >
              <li
                class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  <span>
                    三级菜单-1
                  </span>
                </span>
              </li>
              <li
                class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  <span>
                    三级菜单-2
                  </span>
                </span>
              </li>
            </ul>
          </div>
        </li>
        <li
          class="t-menu__item t-is-disabled"
        >
          <svg
            class="t-icon t-icon-rollback"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M4.2 5l1.65-1.65-.7-.7-2.5 2.5a.5.5 0 000 .7l2.5 2.5.7-.7L4.21 6H10a3 3 0 010 6H5v1h5a4 4 0 100-8H4.2z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          <span
            class="t-menu__content"
          >
            根目录
          </span>
        </li>
        <li
          class="t-submenu"
        >
          <div
            class="t-menu__item"
          >
            <svg
              class="t-icon t-icon-mail"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M1.5 4a1 1 0 011-1h11a1 1 0 011 1v8a1 1 0 01-1 1h-11a1 1 0 01-1-1V4zm11.6 0H2.9L8 7.4 13.1 4zm-10.6.93V12h11V4.93L8 8.6 2.5 4.93z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
             
            <span
              class="t-menu__content"
            >
              <span>
                消息区
              </span>
            </span>
            <svg
              class="t-fake-arrow"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
          <div
            class="t-menu__popup t-is-vertical"
          >
            <ul
              class="t-menu__popup-wrapper"
              style="max-height: 0;"
            >
              <li
                class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  <span>
                    三级菜单-1
                  </span>
                </span>
              </li>
              <li
                class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  <span>
                    三级菜单-2
                  </span>
                </span>
              </li>
            </ul>
          </div>
        </li>
      </ul>
      <div
        class="t-menu__operations"
      >
        <svg
          class="t-icon t-icon-view-list t-menu__operations-icon"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M14 4.5H2v-1h12v1zM14 8.5H2v-1h12v1zM2 12.5h12v-1H2v1z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`custom-header.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-head-menu t-menu--light"
    style="margin-bottom: 20px;"
  >
    <div
      class="t-head-menu__inner"
    >
      <div
        class="t-menu__logo"
      >
        <img
          alt="logo"
          src="https://www.tencent.com/img/index/menu_logo_hover.png"
          width="136"
        />
      </div>
      <ul
        class="t-menu"
      >
        <li
          class="t-menu__item t-is-active t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              菜单1
            </span>
          </span>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              菜单2
            </span>
          </span>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              菜单3
            </span>
          </span>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              菜单4
            </span>
          </span>
        </li>
      </ul>
      <div
        class="t-menu__operations"
      >
        <div
          class="tdesign-demo-menu__block"
        >
          自定义内容区域
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-head-menu t-menu--dark"
  >
    <div
      class="t-head-menu__inner"
    >
      <div
        class="t-menu__logo"
      >
        <img
          alt="logo"
          class="margin_0"
          src="https://www.tencent.com/img/index/menu_logo.png"
          width="136"
        />
      </div>
      <ul
        class="t-menu"
      >
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              菜单1
            </span>
          </span>
        </li>
        <li
          class="t-menu__item t-is-active t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              菜单2
            </span>
          </span>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              菜单3
            </span>
          </span>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              菜单4
            </span>
          </span>
        </li>
      </ul>
      <div
        class="t-menu__operations"
      >
        <div
          class="tdesign-demo-menu__block"
        >
          自定义内容区域
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`custom-side.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-default-menu"
    style="width: 232px; margin-right: 20px;"
  >
    <div
      class="t-default-menu__inner"
    >
      <div
        class="t-menu__logo"
      >
        <img
          alt="logo"
          src="https://www.tencent.com/img/index/menu_logo_hover.png"
          width="136"
        />
      </div>
      <ul
        class="t-menu t-menu--scroll"
      >
        <li
          class="t-menu__item t-is-active t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              仪表盘
            </span>
          </span>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              资源列表
            </span>
          </span>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              视频区
            </span>
          </span>
        </li>
        <li
          class="t-menu__item t-is-disabled t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              根目录
            </span>
          </span>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              调度平台
            </span>
          </span>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              精准监控
            </span>
          </span>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              个人中心
            </span>
          </span>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="t-default-menu t-menu--dark"
    style="width: 232px;"
  >
    <div
      class="t-default-menu__inner"
    >
      <div
        class="t-menu__logo"
      >
        <img
          alt="logo"
          src="https://www.tencent.com/img/index/menu_logo.png"
          width="136"
        />
      </div>
      <ul
        class="t-menu t-menu--scroll"
      >
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              仪表盘
            </span>
          </span>
        </li>
        <li
          class="t-menu__item t-is-active t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              资源列表
            </span>
          </span>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              视频区
            </span>
          </span>
        </li>
        <li
          class="t-menu__item t-is-disabled t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              根目录
            </span>
          </span>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              调度平台
            </span>
          </span>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              精准监控
            </span>
          </span>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              个人中心
            </span>
          </span>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`double.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-head-menu t-menu--light"
    style="margin-bottom: 20px;"
  >
    <div
      class="t-head-menu__inner"
    >
      <div
        class="t-menu__logo"
      >
        <img
          alt="logo"
          src="https://www.tencent.com/img/index/menu_logo_hover.png"
          width="136"
        />
      </div>
      <ul
        class="t-menu"
      >
        <li
          class="t-submenu"
        >
          <div
            class="t-menu__item t-is-active"
          >
            <span>
              菜单1
            </span>
          </div>
        </li>
        <li
          class="t-submenu"
        >
          <div
            class="t-menu__item"
          >
            <span>
              菜单2
            </span>
          </div>
        </li>
        <li
          class="t-submenu"
        >
          <div
            class="t-menu__item"
          >
            <span>
              菜单3
            </span>
          </div>
        </li>
        <li
          class="t-submenu"
        >
          <div
            class="t-menu__item"
          >
            <span>
              菜单4
            </span>
          </div>
        </li>
      </ul>
    </div>
    <ul
      class="t-head-menu__submenu t-submenu"
    >
      <div
        class="t-tabs"
      >
        <div
          class="t-tabs__header t-is-top"
        >
          <div
            class="t-tabs__nav"
            style="min-height: 48px;"
          >
            <div
              class="t-tabs__operations t-tabs__operations--left"
            />
            <div
              class="t-tabs__operations t-tabs__operations--right"
            />
            <div
              class="t-tabs__nav-container t-is-top"
            >
              <div
                class="t-tabs__nav-scroll"
              >
                <div
                  class="t-tabs__nav-wrap t-is-smooth"
                  style="transform: translate(0px, 0);"
                >
                  <div
                    class="t-tabs__bar t-is-top"
                    style="transform: translateX(0px);"
                  />
                  <div
                    class="t-tabs__bar t-is-top"
                  />
                  <div
                    class="t-tabs__nav-item t-size-m t-is-active t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        子菜单1
                      </span>
                    </div>
                  </div>
                  <div
                    class="t-tabs__nav-item t-size-m t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        子菜单2
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-tabs__content t-is-top"
        >
          <div
            class="t-tab-panel"
          />
        </div>
      </div>
    </ul>
  </div>
  <div
    class="t-head-menu t-menu--dark"
  >
    <div
      class="t-head-menu__inner"
    >
      <div
        class="t-menu__logo"
      >
        <img
          alt="logo"
          src="https://www.tencent.com/img/index/menu_logo.png"
          width="136"
        />
      </div>
      <ul
        class="t-menu"
      >
        <li
          class="t-submenu"
        >
          <div
            class="t-menu__item t-is-active"
          >
            <span>
              菜单1
            </span>
          </div>
        </li>
        <li
          class="t-submenu"
        >
          <div
            class="t-menu__item"
          >
            <span>
              菜单2
            </span>
          </div>
        </li>
        <li
          class="t-submenu"
        >
          <div
            class="t-menu__item"
          >
            <span>
              菜单3
            </span>
          </div>
        </li>
        <li
          class="t-submenu"
        >
          <div
            class="t-menu__item"
          >
            <span>
              菜单4
            </span>
          </div>
        </li>
      </ul>
    </div>
    <ul
      class="t-head-menu__submenu t-submenu"
    >
      <div
        class="t-tabs"
      >
        <div
          class="t-tabs__header t-is-top"
        >
          <div
            class="t-tabs__nav"
            style="min-height: 48px;"
          >
            <div
              class="t-tabs__operations t-tabs__operations--left"
            />
            <div
              class="t-tabs__operations t-tabs__operations--right"
            />
            <div
              class="t-tabs__nav-container t-is-top"
            >
              <div
                class="t-tabs__nav-scroll"
              >
                <div
                  class="t-tabs__nav-wrap t-is-smooth"
                  style="transform: translate(0px, 0);"
                >
                  <div
                    class="t-tabs__bar t-is-top"
                    style="transform: translateX(0px);"
                  />
                  <div
                    class="t-tabs__bar t-is-top"
                  />
                  <div
                    class="t-tabs__nav-item t-size-m t-is-active t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        子菜单1
                      </span>
                    </div>
                  </div>
                  <div
                    class="t-tabs__nav-item t-size-m t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        子菜单2
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-tabs__content t-is-top"
        >
          <div
            class="t-tab-panel"
          />
        </div>
      </div>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`group-side.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-default-menu"
    style="width: 232px;"
  >
    <div
      class="t-default-menu__inner"
    >
      <div
        class="t-menu__logo"
      >
        <img
          alt="logo"
          src="https://www.tencent.com/img/index/menu_logo_hover.png"
          width="136"
        />
      </div>
      <ul
        class="t-menu t-menu--scroll"
      >
        <div
          class="t-menu-group"
        >
          <div
            class="t-menu-group__title"
            style="padding-left: 16px;"
          >
            Classification A
          </div>
          <li
            class="t-menu__item t-is-active"
          >
            <svg
              class="t-icon t-icon-chart"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M4.5 12V7.5h1V12h-1zM7.5 4.5V12h1V4.5h-1zM10.5 12V9h1v3h-1z"
                fill="currentColor"
                fill-opacity="0.9"
              />
              <path
                d="M2 3a1 1 0 011-1h10a1 1 0 011 1v10a1 1 0 01-1 1H3a1 1 0 01-1-1V3zm1 0v10h10V3H3z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
            <span
              class="t-menu__content"
            >
              仪表盘
            </span>
          </li>
        </div>
        <div
          class="t-menu-group"
        >
          <div
            class="t-menu-group__title"
            style="padding-left: 16px;"
          >
            Classification B
          </div>
          <li
            class="t-menu__item t-menu__item--plain"
          >
            <span
              class="t-menu__content"
            >
              调度平台
            </span>
          </li>
          <li
            class="t-menu__item t-menu__item--plain"
          >
            <span
              class="t-menu__content"
            >
              菜单内容二很长很长很长很长很长很长很长很长
            </span>
          </li>
        </div>
        <div
          class="t-menu-group"
        >
          <div
            class="t-menu-group__title"
            style="padding-left: 16px;"
          >
            Classification C
          </div>
          <li
            class="t-menu__item t-menu__item--plain"
          >
            <span
              class="t-menu__content"
            >
              精准监控
            </span>
          </li>
          <li
            class="t-submenu"
          >
            <div
              class="t-menu__item"
            >
              <svg
                class="t-icon t-icon-file"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M3.5 1c-.48 0-1 .34-1 .92v12.16c0 .58.52.92 1 .92h9c.48 0 1-.34 1-.92V5.7a1 1 0 00-.3-.71L9.5 1.3a1 1 0 00-.7-.3H3.5zm5 1v4.01h4V14h-9V2h5zm1 .7l2.3 2.31H9.5v-2.3z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
               
              <span
                class="t-menu__content"
              >
                <span>
                  资源列表
                </span>
              </span>
              <svg
                class="t-fake-arrow"
                fill="none"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                  stroke="black"
                  stroke-opacity="0.9"
                  stroke-width="1.3"
                />
              </svg>
            </div>
            <ul
              class="t-menu__sub"
              style="max-height: 0; --padding-left: 44px;"
            >
              <div
                class="t-menu-group"
              >
                <div
                  class="t-menu-group__title"
                  style="padding-left: 32px;"
                >
                  inner Classification D
                </div>
                <li
                  class="t-submenu"
                >
                  <div
                    class="t-menu__item"
                  >
                     
                    <span
                      class="t-menu__content"
                    >
                      二级菜单-1
                    </span>
                    <svg
                      class="t-fake-arrow"
                      fill="none"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                        stroke="black"
                        stroke-opacity="0.9"
                        stroke-width="1.3"
                      />
                    </svg>
                  </div>
                  <ul
                    class="t-menu__sub"
                    style="max-height: 0; --padding-left: 60px;"
                  >
                    <div
                      class="t-menu-group"
                    >
                      <div
                        class="t-menu-group__title"
                        style="padding-left: 48px;"
                      >
                        inner Classification E
                      </div>
                      <li
                        class="t-menu__item t-menu__item--plain"
                      >
                        <span
                          class="t-menu__content"
                        >
                          三级菜单-1
                        </span>
                      </li>
                    </div>
                    <li
                      class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-menu__item--plain"
                    >
                      <span
                        class="t-menu__content"
                      >
                        三级菜单-2
                      </span>
                    </li>
                    <li
                      class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-menu__item--plain"
                    >
                      <span
                        class="t-menu__content"
                      >
                        三级菜单-3
                      </span>
                    </li>
                  </ul>
                </li>
              </div>
              <div
                class="t-menu-group"
              >
                <div
                  class="t-menu-group__title"
                  style="padding-left: 32px;"
                >
                  inner Classification E
                </div>
                <li
                  class="t-menu__item t-menu__item--plain"
                >
                  <span
                    class="t-menu__content"
                  >
                    <span>
                      二级菜单-2
                    </span>
                  </span>
                </li>
              </div>
            </ul>
          </li>
        </div>
      </ul>
      <div
        class="t-menu__operations"
      >
        <svg
          class="t-icon t-icon-view-list"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M14 4.5H2v-1h12v1zM14 8.5H2v-1h12v1zM2 12.5h12v-1H2v1z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`multi-side.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-default-menu"
    style="width: 232px; margin-right: 20px;"
  >
    <div
      class="t-default-menu__inner"
    >
      <ul
        class="t-menu t-menu--scroll"
      >
        <li
          class="t-menu__item"
        >
          <svg
            class="t-icon t-icon-app"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M11.25 1.75a3 3 0 100 6 3 3 0 000-6zm-2 3a2 2 0 114 0 2 2 0 01-4 0zM2 3a1 1 0 011-1h3.5a1 1 0 011 1v3.5a1 1 0 01-1 1H3a1 1 0 01-1-1V3zm1 0v3.5h3.5V3H3zM2 9.5a1 1 0 011-1h3.5a1 1 0 011 1V13a1 1 0 01-1 1H3a1 1 0 01-1-1V9.5zm1 0V13h3.5V9.5H3zM8.5 9.5a1 1 0 011-1H13a1 1 0 011 1V13a1 1 0 01-1 1H9.5a1 1 0 01-1-1V9.5zm1 3.5H13V9.5H9.5V13z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          <span
            class="t-menu__content"
          >
            仪表盘
          </span>
        </li>
        <li
          class="t-submenu t-is-opened"
        >
          <div
            class="t-menu__item t-is-opened t-is-active"
          >
            <svg
              class="t-icon t-icon-code"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8.94 2.56L6.09 13.18l.97.26L9.9 2.82l-.97-.26zM2.15 8l3.42 3.43-.7.7-3.71-3.7a.6.6 0 010-.85l3.7-3.71.71.7L2.15 8zM13.85 8l-3.44 3.4.7.71 3.73-3.68a.6.6 0 000-.86L11.1 3.9l-.7.7L13.85 8z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
             
            <span
              class="t-menu__content"
            >
              <span>
                资源列表
              </span>
            </span>
            <svg
              class="t-fake-arrow t-fake-arrow--active"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
          <ul
            class="t-menu__sub"
            style="max-height: 50px; --padding-left: 44px;"
          >
            <li
              class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-is-disabled t-is-active t-menu__item--plain"
            >
              <span
                class="t-menu__content"
              >
                <span>
                  菜单二
                </span>
              </span>
            </li>
          </ul>
        </li>
        <li
          class="t-submenu t-is-opened"
        >
          <div
            class="t-menu__item t-is-opened"
          >
            <svg
              class="t-icon t-icon-file"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M3.5 1c-.48 0-1 .34-1 .92v12.16c0 .58.52.92 1 .92h9c.48 0 1-.34 1-.92V5.7a1 1 0 00-.3-.71L9.5 1.3a1 1 0 00-.7-.3H3.5zm5 1v4.01h4V14h-9V2h5zm1 .7l2.3 2.31H9.5v-2.3z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
             
            <span
              class="t-menu__content"
            >
              <span>
                调度平台
              </span>
            </span>
            <svg
              class="t-fake-arrow t-fake-arrow--active"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
          <ul
            class="t-menu__sub"
            style="max-height: 250px; --padding-left: 44px;"
          >
            <li
              class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-submenu"
            >
              <div
                class="t-menu__item"
              >
                 
                <span
                  class="t-menu__content"
                >
                  二级菜单-1
                </span>
                <svg
                  class="t-fake-arrow"
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                    stroke="black"
                    stroke-opacity="0.9"
                    stroke-width="1.3"
                  />
                </svg>
              </div>
              <ul
                class="t-menu__sub"
                style="max-height: 0; --padding-left: 60px;"
              >
                <li
                  class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-menu__item--plain"
                >
                  <span
                    class="t-menu__content"
                  >
                    三级菜单-1
                  </span>
                </li>
                <li
                  class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-menu__item--plain"
                >
                  <span
                    class="t-menu__content"
                  >
                    三级菜单-2
                  </span>
                </li>
                <li
                  class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-menu__item--plain"
                >
                  <span
                    class="t-menu__content"
                  >
                    三级菜单-3
                  </span>
                </li>
              </ul>
            </li>
            <li
              class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-menu__item--plain"
            >
              <span
                class="t-menu__content"
              >
                <span>
                  二级菜单-2
                </span>
              </span>
            </li>
          </ul>
        </li>
        <li
          class="t-submenu"
        >
          <div
            class="t-menu__item"
          >
            <svg
              class="t-icon t-icon-user"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M11.5 5a3.5 3.5 0 11-7 0 3.5 3.5 0 017 0zm-1 0a2.5 2.5 0 10-5 0 2.5 2.5 0 005 0zM13.96 10.85c.34.16.54.5.54.87V14a.5.5 0 01-.5.5H2a.5.5 0 01-.5-.5v-2.28c0-.37.2-.7.54-.87a13.79 13.79 0 0111.92 0zM8 10.5c-1.97 0-3.83.45-5.5 1.24v1.76h11v-1.76A12.78 12.78 0 008 10.5z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
             
            <span
              class="t-menu__content"
            >
              <span>
                精准监控
              </span>
            </span>
            <svg
              class="t-fake-arrow"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
          <ul
            class="t-menu__sub"
            style="max-height: 0; --padding-left: 44px;"
          >
            <li
              class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-menu__item--plain"
            >
              <span
                class="t-menu__content"
              >
                <span>
                  二级菜单-1
                </span>
              </span>
            </li>
            <li
              class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-menu__item--plain"
            >
              <span
                class="t-menu__content"
              >
                <span>
                  二级菜单-2
                </span>
              </span>
            </li>
          </ul>
        </li>
        <li
          class="t-menu__item t-is-disabled"
        >
          <svg
            class="t-icon t-icon-rollback"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M4.2 5l1.65-1.65-.7-.7-2.5 2.5a.5.5 0 000 .7l2.5 2.5.7-.7L4.21 6H10a3 3 0 010 6H5v1h5a4 4 0 100-8H4.2z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          <span
            class="t-menu__content"
          >
            根目录
          </span>
        </li>
        <li
          class="t-submenu"
        >
          <div
            class="t-menu__item"
          >
            <svg
              class="t-icon t-icon-mail"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M1.5 4a1 1 0 011-1h11a1 1 0 011 1v8a1 1 0 01-1 1h-11a1 1 0 01-1-1V4zm11.6 0H2.9L8 7.4 13.1 4zm-10.6.93V12h11V4.93L8 8.6 2.5 4.93z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
             
            <span
              class="t-menu__content"
            >
              <span>
                消息区
              </span>
            </span>
            <svg
              class="t-fake-arrow"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
          <ul
            class="t-menu__sub"
            style="max-height: 0; --padding-left: 44px;"
          >
            <li
              class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-menu__item--plain"
            >
              <span
                class="t-menu__content"
              >
                <span>
                  二级菜单-1
                </span>
              </span>
            </li>
            <li
              class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-menu__item--plain"
            >
              <span
                class="t-menu__content"
              >
                <span>
                  二级菜单-2
                </span>
              </span>
            </li>
          </ul>
        </li>
      </ul>
      <div
        class="t-menu__operations"
      >
        <svg
          class="t-icon t-icon-view-list t-menu__operations-icon"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M14 4.5H2v-1h12v1zM14 8.5H2v-1h12v1zM2 12.5h12v-1H2v1z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="t-default-menu t-menu--dark"
    style="width: 232px;"
  >
    <div
      class="t-default-menu__inner"
    >
      <ul
        class="t-menu t-menu--scroll"
      >
        <li
          class="t-menu__item"
        >
          <svg
            class="t-icon t-icon-app"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M11.25 1.75a3 3 0 100 6 3 3 0 000-6zm-2 3a2 2 0 114 0 2 2 0 01-4 0zM2 3a1 1 0 011-1h3.5a1 1 0 011 1v3.5a1 1 0 01-1 1H3a1 1 0 01-1-1V3zm1 0v3.5h3.5V3H3zM2 9.5a1 1 0 011-1h3.5a1 1 0 011 1V13a1 1 0 01-1 1H3a1 1 0 01-1-1V9.5zm1 0V13h3.5V9.5H3zM8.5 9.5a1 1 0 011-1H13a1 1 0 011 1V13a1 1 0 01-1 1H9.5a1 1 0 01-1-1V9.5zm1 3.5H13V9.5H9.5V13z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          <span
            class="t-menu__content"
          >
            仪表盘
          </span>
        </li>
        <li
          class="t-submenu t-is-opened"
        >
          <div
            class="t-menu__item t-is-opened t-is-active"
          >
            <svg
              class="t-icon t-icon-code"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8.94 2.56L6.09 13.18l.97.26L9.9 2.82l-.97-.26zM2.15 8l3.42 3.43-.7.7-3.71-3.7a.6.6 0 010-.85l3.7-3.71.71.7L2.15 8zM13.85 8l-3.44 3.4.7.71 3.73-3.68a.6.6 0 000-.86L11.1 3.9l-.7.7L13.85 8z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
             
            <span
              class="t-menu__content"
            >
              <span>
                资源列表
              </span>
            </span>
            <svg
              class="t-fake-arrow t-fake-arrow--active"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
          <ul
            class="t-menu__sub"
            style="max-height: 50px; --padding-left: 44px;"
          >
            <li
              class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-is-disabled t-is-active t-menu__item--plain"
            >
              <span
                class="t-menu__content"
              >
                <span>
                  菜单二
                </span>
              </span>
            </li>
          </ul>
        </li>
        <li
          class="t-submenu t-is-opened"
        >
          <div
            class="t-menu__item t-is-opened"
          >
            <svg
              class="t-icon t-icon-file"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M3.5 1c-.48 0-1 .34-1 .92v12.16c0 .58.52.92 1 .92h9c.48 0 1-.34 1-.92V5.7a1 1 0 00-.3-.71L9.5 1.3a1 1 0 00-.7-.3H3.5zm5 1v4.01h4V14h-9V2h5zm1 .7l2.3 2.31H9.5v-2.3z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
             
            <span
              class="t-menu__content"
            >
              <span>
                调度平台
              </span>
            </span>
            <svg
              class="t-fake-arrow t-fake-arrow--active"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
          <ul
            class="t-menu__sub"
            style="max-height: 100px; --padding-left: 44px;"
          >
            <li
              class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-menu__item--plain"
            >
              <span
                class="t-menu__content"
              >
                <span>
                  二级菜单-1
                </span>
              </span>
            </li>
            <li
              class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-menu__item--plain"
            >
              <span
                class="t-menu__content"
              >
                <span>
                  二级菜单-2
                </span>
              </span>
            </li>
          </ul>
        </li>
        <li
          class="t-submenu"
        >
          <div
            class="t-menu__item"
          >
            <svg
              class="t-icon t-icon-user"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M11.5 5a3.5 3.5 0 11-7 0 3.5 3.5 0 017 0zm-1 0a2.5 2.5 0 10-5 0 2.5 2.5 0 005 0zM13.96 10.85c.34.16.54.5.54.87V14a.5.5 0 01-.5.5H2a.5.5 0 01-.5-.5v-2.28c0-.37.2-.7.54-.87a13.79 13.79 0 0111.92 0zM8 10.5c-1.97 0-3.83.45-5.5 1.24v1.76h11v-1.76A12.78 12.78 0 008 10.5z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
             
            <span
              class="t-menu__content"
            >
              <span>
                精准监控
              </span>
            </span>
            <svg
              class="t-fake-arrow"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
          <ul
            class="t-menu__sub"
            style="max-height: 0; --padding-left: 44px;"
          >
            <li
              class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-menu__item--plain"
            >
              <span
                class="t-menu__content"
              >
                <span>
                  二级菜单-1
                </span>
              </span>
            </li>
            <li
              class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-menu__item--plain"
            >
              <span
                class="t-menu__content"
              >
                <span>
                  二级菜单-2
                </span>
              </span>
            </li>
          </ul>
        </li>
        <li
          class="t-menu__item t-is-disabled"
        >
          <svg
            class="t-icon t-icon-rollback"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M4.2 5l1.65-1.65-.7-.7-2.5 2.5a.5.5 0 000 .7l2.5 2.5.7-.7L4.21 6H10a3 3 0 010 6H5v1h5a4 4 0 100-8H4.2z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          <span
            class="t-menu__content"
          >
            根目录
          </span>
        </li>
        <li
          class="t-submenu"
        >
          <div
            class="t-menu__item"
          >
            <svg
              class="t-icon t-icon-mail"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M1.5 4a1 1 0 011-1h11a1 1 0 011 1v8a1 1 0 01-1 1h-11a1 1 0 01-1-1V4zm11.6 0H2.9L8 7.4 13.1 4zm-10.6.93V12h11V4.93L8 8.6 2.5 4.93z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
             
            <span
              class="t-menu__content"
            >
              <span>
                消息区
              </span>
            </span>
            <svg
              class="t-fake-arrow"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
          <ul
            class="t-menu__sub"
            style="max-height: 0; --padding-left: 44px;"
          >
            <li
              class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-menu__item--plain"
            >
              <span
                class="t-menu__content"
              >
                <span>
                  二级菜单-1
                </span>
              </span>
            </li>
            <li
              class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-menu__item--plain"
            >
              <span
                class="t-menu__content"
              >
                <span>
                  二级菜单-2
                </span>
              </span>
            </li>
          </ul>
        </li>
      </ul>
      <div
        class="t-menu__operations"
      >
        <svg
          class="t-icon t-icon-view-list t-menu__operations-icon"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M14 4.5H2v-1h12v1zM14 8.5H2v-1h12v1zM2 12.5h12v-1H2v1z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`multiple.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-head-menu t-menu--light"
    style="margin-bottom: 20px;"
  >
    <div
      class="t-head-menu__inner"
    >
      <div
        class="t-menu__logo"
      >
        <img
          alt="logo"
          src="https://www.tencent.com/img/index/menu_logo_hover.png"
          width="136"
        />
      </div>
      <ul
        class="t-menu"
      >
        <li
          class="t-submenu"
        >
          <div
            class="t-menu__item t-is-active"
          >
            <span>
              电器
            </span>
            <svg
              class="t-fake-arrow"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
          <div
            class="t-menu__popup"
            style="--popup-max-height: 250px;"
          >
            <ul
              class="t-menu__popup-wrapper"
            >
              <li
                class="t-submenu"
              >
                <div
                  class="t-menu__item"
                >
                  <span>
                    电视
                  </span>
                  <svg
                    class="t-fake-arrow"
                    fill="none"
                    height="16"
                    style="transform: rotate(-90deg);"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                      stroke="black"
                      stroke-opacity="0.9"
                      stroke-width="1.3"
                    />
                  </svg>
                </div>
                <div
                  class="t-menu__popup"
                  style="--popup-max-height: 150px;"
                >
                  <ul
                    class="t-menu__popup-wrapper"
                  >
                    <li
                      class="t-menu__item t-menu__item--plain"
                    >
                      <span
                        class="t-menu__content"
                      >
                        小米电视
                      </span>
                    </li>
                    <li
                      class="t-menu__item t-menu__item--plain"
                    >
                      <span
                        class="t-menu__content"
                      >
                        索尼电视
                      </span>
                    </li>
                    <li
                      class="t-menu__item t-menu__item--plain"
                    >
                      <span
                        class="t-menu__content"
                      >
                        华为电视
                      </span>
                    </li>
                  </ul>
                </div>
              </li>
              <li
                class="t-menu__item t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  <span>
                    冰箱
                  </span>
                </span>
              </li>
            </ul>
          </div>
        </li>
        <li
          class="t-menu__item t-is-disabled t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            女装
          </span>
        </li>
        <li
          class="t-submenu"
        >
          <div
            class="t-menu__item"
          >
            <span>
              水果蔬菜
            </span>
            <svg
              class="t-fake-arrow"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
          <div
            class="t-menu__popup"
            style="--popup-max-height: 100px;"
          >
            <ul
              class="t-menu__popup-wrapper"
            >
              <li
                class="t-menu__item t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  <span>
                    苹果
                  </span>
                </span>
              </li>
              <li
                class="t-menu__item t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  黄瓜
                </span>
              </li>
            </ul>
          </div>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            其他
          </span>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="t-head-menu t-menu--dark"
    style="margin-bottom: 20px;"
  >
    <div
      class="t-head-menu__inner"
    >
      <div
        class="t-menu__logo"
      >
        <img
          alt="logo"
          src="https://www.tencent.com/img/index/menu_logo.png"
          width="136"
        />
      </div>
      <ul
        class="t-menu"
      >
        <li
          class="t-submenu"
        >
          <div
            class="t-menu__item"
          >
            <span>
              电器
            </span>
            <svg
              class="t-fake-arrow"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
          <div
            class="t-menu__popup"
            style="--popup-max-height: 100px;"
          >
            <ul
              class="t-menu__popup-wrapper"
            >
              <li
                class="t-menu__item t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  <span>
                    电视
                  </span>
                </span>
              </li>
              <li
                class="t-menu__item t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  <span>
                    冰箱
                  </span>
                </span>
              </li>
            </ul>
          </div>
        </li>
        <li
          class="t-menu__item t-is-disabled t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            女装
          </span>
        </li>
        <li
          class="t-submenu"
        >
          <div
            class="t-menu__item"
          >
            <span>
              水果蔬菜
            </span>
            <svg
              class="t-fake-arrow"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
          <div
            class="t-menu__popup"
            style="--popup-max-height: 100px;"
          >
            <ul
              class="t-menu__popup-wrapper"
            >
              <li
                class="t-menu__item t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  <span>
                    苹果
                  </span>
                </span>
              </li>
              <li
                class="t-menu__item t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  黄瓜
                </span>
              </li>
            </ul>
          </div>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            其他
          </span>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`popup-side.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-default-menu t-is-collapsed"
    style="width: 64px; margin-right: 20px;"
  >
    <div
      class="t-default-menu__inner"
    >
      <ul
        class="t-menu"
      >
        <li
          class="t-menu__item"
        >
          <svg
            class="t-icon t-icon-app"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M11.25 1.75a3 3 0 100 6 3 3 0 000-6zm-2 3a2 2 0 114 0 2 2 0 01-4 0zM2 3a1 1 0 011-1h3.5a1 1 0 011 1v3.5a1 1 0 01-1 1H3a1 1 0 01-1-1V3zm1 0v3.5h3.5V3H3zM2 9.5a1 1 0 011-1h3.5a1 1 0 011 1V13a1 1 0 01-1 1H3a1 1 0 01-1-1V9.5zm1 0V13h3.5V9.5H3zM8.5 9.5a1 1 0 011-1H13a1 1 0 011 1V13a1 1 0 01-1 1H9.5a1 1 0 01-1-1V9.5zm1 3.5H13V9.5H9.5V13z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          <span
            class="t-menu__content"
          >
            仪表盘
          </span>
        </li>
        <li
          class="t-submenu"
        >
          <div
            class="t-menu__item t-is-active"
          >
            <svg
              class="t-icon t-icon-code"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8.94 2.56L6.09 13.18l.97.26L9.9 2.82l-.97-.26zM2.15 8l3.42 3.43-.7.7-3.71-3.7a.6.6 0 010-.85l3.7-3.71.71.7L2.15 8zM13.85 8l-3.44 3.4.7.71 3.73-3.68a.6.6 0 000-.86L11.1 3.9l-.7.7L13.85 8z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
             
            <span
              class="t-menu__content"
            >
              <span>
                资源列表
              </span>
            </span>
            <svg
              class="t-fake-arrow"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
          <div
            class="t-menu__popup t-is-vertical"
          >
            <ul
              class="t-menu__popup-wrapper"
              style="max-height: 0;"
            >
              <li
                class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-is-disabled t-is-active t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  <span>
                    菜单二
                  </span>
                </span>
              </li>
            </ul>
          </div>
        </li>
        <li
          class="t-submenu"
        >
          <div
            class="t-menu__item"
          >
            <svg
              class="t-icon t-icon-file"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M3.5 1c-.48 0-1 .34-1 .92v12.16c0 .58.52.92 1 .92h9c.48 0 1-.34 1-.92V5.7a1 1 0 00-.3-.71L9.5 1.3a1 1 0 00-.7-.3H3.5zm5 1v4.01h4V14h-9V2h5zm1 .7l2.3 2.31H9.5v-2.3z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
             
            <span
              class="t-menu__content"
            >
              <span>
                调度平台
              </span>
            </span>
            <svg
              class="t-fake-arrow"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
          <div
            class="t-menu__popup t-is-vertical"
          >
            <ul
              class="t-menu__popup-wrapper"
              style="max-height: 0;"
            >
              <li
                class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-submenu"
              >
                <div
                  class="t-menu__item"
                >
                   
                  <span
                    class="t-menu__content"
                  >
                    二级菜单-1
                  </span>
                  <svg
                    class="t-fake-arrow"
                    fill="none"
                    height="16"
                    style="transform: rotate(-90deg);"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                      stroke="black"
                      stroke-opacity="0.9"
                      stroke-width="1.3"
                    />
                  </svg>
                </div>
                <div
                  class="t-menu__popup t-is-vertical"
                >
                  <ul
                    class="t-menu__popup-wrapper"
                    style="max-height: 0;"
                  >
                    <li
                      class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-menu__item--plain"
                    >
                      <span
                        class="t-menu__content"
                      >
                        三级菜单-1
                      </span>
                    </li>
                    <li
                      class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-menu__item--plain"
                    >
                      <span
                        class="t-menu__content"
                      >
                        三级菜单-2
                      </span>
                    </li>
                    <li
                      class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-menu__item--plain"
                    >
                      <span
                        class="t-menu__content"
                      >
                        三级菜单-3
                      </span>
                    </li>
                  </ul>
                </div>
              </li>
              <li
                class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  <span>
                    二级菜单-2
                  </span>
                </span>
              </li>
            </ul>
          </div>
        </li>
        <li
          class="t-submenu"
        >
          <div
            class="t-menu__item"
          >
            <svg
              class="t-icon t-icon-user"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M11.5 5a3.5 3.5 0 11-7 0 3.5 3.5 0 017 0zm-1 0a2.5 2.5 0 10-5 0 2.5 2.5 0 005 0zM13.96 10.85c.34.16.54.5.54.87V14a.5.5 0 01-.5.5H2a.5.5 0 01-.5-.5v-2.28c0-.37.2-.7.54-.87a13.79 13.79 0 0111.92 0zM8 10.5c-1.97 0-3.83.45-5.5 1.24v1.76h11v-1.76A12.78 12.78 0 008 10.5z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
             
            <span
              class="t-menu__content"
            >
              <span>
                精准监控
              </span>
            </span>
            <svg
              class="t-fake-arrow"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
          <div
            class="t-menu__popup t-is-vertical"
          >
            <ul
              class="t-menu__popup-wrapper"
              style="max-height: 0;"
            >
              <li
                class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  <span>
                    二级菜单-1
                  </span>
                </span>
              </li>
              <li
                class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  <span>
                    二级菜单-2
                  </span>
                </span>
              </li>
            </ul>
          </div>
        </li>
        <li
          class="t-menu__item t-is-disabled"
        >
          <svg
            class="t-icon t-icon-rollback"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M4.2 5l1.65-1.65-.7-.7-2.5 2.5a.5.5 0 000 .7l2.5 2.5.7-.7L4.21 6H10a3 3 0 010 6H5v1h5a4 4 0 100-8H4.2z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          <span
            class="t-menu__content"
          >
            根目录
          </span>
        </li>
        <li
          class="t-submenu"
        >
          <div
            class="t-menu__item"
          >
            <svg
              class="t-icon t-icon-mail"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M1.5 4a1 1 0 011-1h11a1 1 0 011 1v8a1 1 0 01-1 1h-11a1 1 0 01-1-1V4zm11.6 0H2.9L8 7.4 13.1 4zm-10.6.93V12h11V4.93L8 8.6 2.5 4.93z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
             
            <span
              class="t-menu__content"
            >
              <span>
                消息区
              </span>
            </span>
            <svg
              class="t-fake-arrow"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
          <div
            class="t-menu__popup t-is-vertical"
          >
            <ul
              class="t-menu__popup-wrapper"
              style="max-height: 0;"
            >
              <li
                class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  <span>
                    二级菜单-1
                  </span>
                </span>
              </li>
              <li
                class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  <span>
                    二级菜单-2
                  </span>
                </span>
              </li>
            </ul>
          </div>
        </li>
      </ul>
      <div
        class="t-menu__operations"
      >
        <svg
          class="t-icon t-icon-view-list t-menu__operations-icon"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M14 4.5H2v-1h12v1zM14 8.5H2v-1h12v1zM2 12.5h12v-1H2v1z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="t-default-menu t-is-collapsed t-menu--dark"
    style="width: 64px;"
  >
    <div
      class="t-default-menu__inner"
    >
      <ul
        class="t-menu"
      >
        <li
          class="t-menu__item"
        >
          <svg
            class="t-icon t-icon-app"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M11.25 1.75a3 3 0 100 6 3 3 0 000-6zm-2 3a2 2 0 114 0 2 2 0 01-4 0zM2 3a1 1 0 011-1h3.5a1 1 0 011 1v3.5a1 1 0 01-1 1H3a1 1 0 01-1-1V3zm1 0v3.5h3.5V3H3zM2 9.5a1 1 0 011-1h3.5a1 1 0 011 1V13a1 1 0 01-1 1H3a1 1 0 01-1-1V9.5zm1 0V13h3.5V9.5H3zM8.5 9.5a1 1 0 011-1H13a1 1 0 011 1V13a1 1 0 01-1 1H9.5a1 1 0 01-1-1V9.5zm1 3.5H13V9.5H9.5V13z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          <span
            class="t-menu__content"
          >
            仪表盘
          </span>
        </li>
        <li
          class="t-submenu"
        >
          <div
            class="t-menu__item t-is-active"
          >
            <svg
              class="t-icon t-icon-code"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8.94 2.56L6.09 13.18l.97.26L9.9 2.82l-.97-.26zM2.15 8l3.42 3.43-.7.7-3.71-3.7a.6.6 0 010-.85l3.7-3.71.71.7L2.15 8zM13.85 8l-3.44 3.4.7.71 3.73-3.68a.6.6 0 000-.86L11.1 3.9l-.7.7L13.85 8z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
             
            <span
              class="t-menu__content"
            >
              <span>
                资源列表
              </span>
            </span>
            <svg
              class="t-fake-arrow"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
          <div
            class="t-menu__popup t-is-vertical"
          >
            <ul
              class="t-menu__popup-wrapper"
              style="max-height: 0;"
            >
              <li
                class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-is-disabled t-is-active t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  <span>
                    菜单二
                  </span>
                </span>
              </li>
            </ul>
          </div>
        </li>
        <li
          class="t-submenu"
        >
          <div
            class="t-menu__item"
          >
            <svg
              class="t-icon t-icon-file"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M3.5 1c-.48 0-1 .34-1 .92v12.16c0 .58.52.92 1 .92h9c.48 0 1-.34 1-.92V5.7a1 1 0 00-.3-.71L9.5 1.3a1 1 0 00-.7-.3H3.5zm5 1v4.01h4V14h-9V2h5zm1 .7l2.3 2.31H9.5v-2.3z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
             
            <span
              class="t-menu__content"
            >
              <span>
                调度平台
              </span>
            </span>
            <svg
              class="t-fake-arrow"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
          <div
            class="t-menu__popup t-is-vertical"
          >
            <ul
              class="t-menu__popup-wrapper"
              style="max-height: 0;"
            >
              <li
                class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  <span>
                    二级菜单-1
                  </span>
                </span>
              </li>
              <li
                class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  <span>
                    二级菜单-2
                  </span>
                </span>
              </li>
            </ul>
          </div>
        </li>
        <li
          class="t-submenu"
        >
          <div
            class="t-menu__item"
          >
            <svg
              class="t-icon t-icon-user"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M11.5 5a3.5 3.5 0 11-7 0 3.5 3.5 0 017 0zm-1 0a2.5 2.5 0 10-5 0 2.5 2.5 0 005 0zM13.96 10.85c.34.16.54.5.54.87V14a.5.5 0 01-.5.5H2a.5.5 0 01-.5-.5v-2.28c0-.37.2-.7.54-.87a13.79 13.79 0 0111.92 0zM8 10.5c-1.97 0-3.83.45-5.5 1.24v1.76h11v-1.76A12.78 12.78 0 008 10.5z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
             
            <span
              class="t-menu__content"
            >
              <span>
                精准监控
              </span>
            </span>
            <svg
              class="t-fake-arrow"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
          <div
            class="t-menu__popup t-is-vertical"
          >
            <ul
              class="t-menu__popup-wrapper"
              style="max-height: 0;"
            >
              <li
                class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  <span>
                    二级菜单-1
                  </span>
                </span>
              </li>
              <li
                class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  <span>
                    二级菜单-2
                  </span>
                </span>
              </li>
            </ul>
          </div>
        </li>
        <li
          class="t-menu__item t-is-disabled"
        >
          <svg
            class="t-icon t-icon-rollback"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M4.2 5l1.65-1.65-.7-.7-2.5 2.5a.5.5 0 000 .7l2.5 2.5.7-.7L4.21 6H10a3 3 0 010 6H5v1h5a4 4 0 100-8H4.2z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          <span
            class="t-menu__content"
          >
            根目录
          </span>
        </li>
        <li
          class="t-submenu"
        >
          <div
            class="t-menu__item"
          >
            <svg
              class="t-icon t-icon-mail"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M1.5 4a1 1 0 011-1h11a1 1 0 011 1v8a1 1 0 01-1 1h-11a1 1 0 01-1-1V4zm11.6 0H2.9L8 7.4 13.1 4zm-10.6.93V12h11V4.93L8 8.6 2.5 4.93z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
             
            <span
              class="t-menu__content"
            >
              <span>
                消息区
              </span>
            </span>
            <svg
              class="t-fake-arrow"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
          <div
            class="t-menu__popup t-is-vertical"
          >
            <ul
              class="t-menu__popup-wrapper"
              style="max-height: 0;"
            >
              <li
                class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  <span>
                    二级菜单-1
                  </span>
                </span>
              </li>
              <li
                class="t-menu__item--plain t-submenu__item t-submenu__item--icon t-menu__item t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  <span>
                    二级菜单-2
                  </span>
                </span>
              </li>
            </ul>
          </div>
        </li>
      </ul>
      <div
        class="t-menu__operations"
      >
        <svg
          class="t-icon t-icon-view-list t-menu__operations-icon"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M14 4.5H2v-1h12v1zM14 8.5H2v-1h12v1zM2 12.5h12v-1H2v1z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-head-menu t-menu--light"
    style="margin-bottom: 20px;"
  >
    <div
      class="t-head-menu__inner"
    >
      <div
        class="t-menu__logo"
      >
        <img
          alt="logo"
          src="https://www.tencent.com/img/index/menu_logo_hover.png"
          width="136"
        />
      </div>
      <ul
        class="t-menu"
      >
        <li
          class="t-menu__item t-is-active t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              菜单1
            </span>
          </span>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              菜单2
            </span>
          </span>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              菜单3
            </span>
          </span>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              菜单4
            </span>
          </span>
        </li>
      </ul>
      <div
        class="t-menu__operations"
      >
        <svg
          class="t-icon t-icon-user-add t-menu__operations-icon"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 8.5a3.5 3.5 0 100-7 3.5 3.5 0 000 7zm0-1a2.5 2.5 0 110-5 2.5 2.5 0 010 5zM11.5 10.99a12.77 12.77 0 00-9 .75v1.76h7v1H2a.5.5 0 01-.5-.5v-2.28c0-.37.2-.7.54-.87a13.79 13.79 0 019.46-.9v1.04zM12.75 13.75V16h1v-2.25H16v-1h-2.25V10.5h-1v2.25H10.5v1h2.25z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="t-icon t-icon-app t-menu__operations-icon"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M11.25 1.75a3 3 0 100 6 3 3 0 000-6zm-2 3a2 2 0 114 0 2 2 0 01-4 0zM2 3a1 1 0 011-1h3.5a1 1 0 011 1v3.5a1 1 0 01-1 1H3a1 1 0 01-1-1V3zm1 0v3.5h3.5V3H3zM2 9.5a1 1 0 011-1h3.5a1 1 0 011 1V13a1 1 0 01-1 1H3a1 1 0 01-1-1V9.5zm1 0V13h3.5V9.5H3zM8.5 9.5a1 1 0 011-1H13a1 1 0 011 1V13a1 1 0 01-1 1H9.5a1 1 0 01-1-1V9.5zm1 3.5H13V9.5H9.5V13z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        <svg
          class="t-icon t-icon-call t-menu__operations-icon"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M14 11.06c0 .6-.16 1.24-.52 1.76l-.12.16c-.24.35-.58.6-.98.75-.28.1-.46.14-.91.2-1.95.17-4.08-.74-6.18-2.6A10.2 10.2 0 012.32 6.9 6.45 6.45 0 012 5c0-.7.16-1.32.48-1.78.3-.42.88-.76 1.75-1.1a1 1 0 011.17.37l1.67 2.35a1 1 0 01-.1 1.27l-.21.22-.26.25c-.07.06-.17.2-.17.2-.02.3.3.93 1.26 1.9l.28.27c.88.81 1.12.88 1.39.69l.09-.07.87-.62a1 1 0 011.04-.06l.24.13c1.66.89 2.42 1.42 2.5 1.97v.08zm-1 .01c0 .09-.11-.04-.36-.22-.35-.25-.89-.57-1.61-.96l-.24-.12-.79.54-.02.01c-.86.68-1.6.49-3.1-.93-1.14-1.18-1.6-2.05-1.55-2.7.03-.35.27-.67.5-.86l.3-.29.12-.13-1.67-2.36c-.7.27-1.13.53-1.29.74C3.11 4.06 3 4.47 3 5c0 .48.1 1.03.28 1.61a9.2 9.2 0 002.67 3.98c1.91 1.7 3.79 2.5 5.41 2.35l.26-.04c.18-.02.28-.05.4-.1.23-.08.4-.2.54-.4.27-.33.4-.75.44-1.15v-.17z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="t-head-menu t-menu--dark"
  >
    <div
      class="t-head-menu__inner"
    >
      <div
        class="t-menu__logo"
      >
        <img
          alt="logo"
          src="https://www.tencent.com/img/index/menu_logo.png"
          width="136"
        />
      </div>
      <ul
        class="t-menu"
      >
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              菜单1
            </span>
          </span>
        </li>
        <li
          class="t-menu__item t-is-active t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              菜单2
            </span>
          </span>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              菜单3
            </span>
          </span>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              菜单4
            </span>
          </span>
        </li>
      </ul>
      <div
        class="t-menu__operations"
      >
        <svg
          class="t-icon t-icon-user-add t-menu__operations-icon"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 8.5a3.5 3.5 0 100-7 3.5 3.5 0 000 7zm0-1a2.5 2.5 0 110-5 2.5 2.5 0 010 5zM11.5 10.99a12.77 12.77 0 00-9 .75v1.76h7v1H2a.5.5 0 01-.5-.5v-2.28c0-.37.2-.7.54-.87a13.79 13.79 0 019.46-.9v1.04zM12.75 13.75V16h1v-2.25H16v-1h-2.25V10.5h-1v2.25H10.5v1h2.25z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="t-icon t-icon-app t-menu__operations-icon"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M11.25 1.75a3 3 0 100 6 3 3 0 000-6zm-2 3a2 2 0 114 0 2 2 0 01-4 0zM2 3a1 1 0 011-1h3.5a1 1 0 011 1v3.5a1 1 0 01-1 1H3a1 1 0 01-1-1V3zm1 0v3.5h3.5V3H3zM2 9.5a1 1 0 011-1h3.5a1 1 0 011 1V13a1 1 0 01-1 1H3a1 1 0 01-1-1V9.5zm1 0V13h3.5V9.5H3zM8.5 9.5a1 1 0 011-1H13a1 1 0 011 1V13a1 1 0 01-1 1H9.5a1 1 0 01-1-1V9.5zm1 3.5H13V9.5H9.5V13z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        <svg
          class="t-icon t-icon-call t-menu__operations-icon"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M14 11.06c0 .6-.16 1.24-.52 1.76l-.12.16c-.24.35-.58.6-.98.75-.28.1-.46.14-.91.2-1.95.17-4.08-.74-6.18-2.6A10.2 10.2 0 012.32 6.9 6.45 6.45 0 012 5c0-.7.16-1.32.48-1.78.3-.42.88-.76 1.75-1.1a1 1 0 011.17.37l1.67 2.35a1 1 0 01-.1 1.27l-.21.22-.26.25c-.07.06-.17.2-.17.2-.02.3.3.93 1.26 1.9l.28.27c.88.81 1.12.88 1.39.69l.09-.07.87-.62a1 1 0 011.04-.06l.24.13c1.66.89 2.42 1.42 2.5 1.97v.08zm-1 .01c0 .09-.11-.04-.36-.22-.35-.25-.89-.57-1.61-.96l-.24-.12-.79.54-.02.01c-.86.68-1.6.49-3.1-.93-1.14-1.18-1.6-2.05-1.55-2.7.03-.35.27-.67.5-.86l.3-.29.12-.13-1.67-2.36c-.7.27-1.13.53-1.29.74C3.11 4.06 3 4.47 3 5c0 .48.1 1.03.28 1.61a9.2 9.2 0 002.67 3.98c1.91 1.7 3.79 2.5 5.41 2.35l.26-.04c.18-.02.28-.05.4-.1.23-.08.4-.2.54-.4.27-.33.4-.75.44-1.15v-.17z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single-side.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-default-menu"
    style="width: 232px; margin-right: 20px;"
  >
    <div
      class="t-default-menu__inner"
    >
      <div
        class="t-menu__logo"
      >
        <img
          alt="logo"
          src="https://www.tencent.com/img/index/menu_logo_hover.png"
          width="136"
        />
      </div>
      <ul
        class="t-menu t-menu--scroll"
      >
        <li
          class="t-menu__item t-is-active t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              仪表盘
            </span>
          </span>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              资源列表
            </span>
          </span>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              视频区
            </span>
          </span>
        </li>
        <li
          class="t-menu__item t-is-disabled t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              根目录
            </span>
          </span>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              调度平台
            </span>
          </span>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              精准监控
            </span>
          </span>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              个人中心
            </span>
          </span>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="t-default-menu t-menu--dark"
    style="width: 232px;"
  >
    <div
      class="t-default-menu__inner"
    >
      <div
        class="t-menu__logo"
      >
        <img
          alt="logo"
          src="https://www.tencent.com/img/index/menu_logo.png"
          width="136"
        />
      </div>
      <ul
        class="t-menu t-menu--scroll"
      >
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              仪表盘
            </span>
          </span>
        </li>
        <li
          class="t-menu__item t-is-active t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              资源列表
            </span>
          </span>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              视频区
            </span>
          </span>
        </li>
        <li
          class="t-menu__item t-is-disabled t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              根目录
            </span>
          </span>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              调度平台
            </span>
          </span>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              精准监控
            </span>
          </span>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <span
            class="t-menu__content"
          >
            <span>
              个人中心
            </span>
          </span>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;
